--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="text/javascript"
       src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"
     ></script>
-    <title>르탄이 - 프로필 링크</title>
+    <title>곽규현 - 프로필 링크</title>
     <style>
       @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
       * {
@@ -98,3 +98,4 @@
     </div>
   </body>
 </html>
+
